# fastapi-aws-starter-kit

./: .flake8  .gitignore  Makefile  README.md  environment.yml  package-lock.json  package.json  pyproject.toml  serverless-config.dev.json.example  serverless.yaml
.github/workflows/: article.yml  main.yaml
article/: README.md  carbon-config.json
fastapi_aws_starter_kit/: config.py  fastapi_app.py  handler.py  web_server.py
fastapi_aws_starter_kit/.github/workflows/: main.yaml
fastapi_aws_starter_kit/routers/: health_check_api.py
fastapi_aws_starter_kit/schemas/: health_check_schemas.py
