[tool.poetry]
name = "fastapi-aws-starter-kit"
version = "0.2.0"
description = "Starter kit for FastAPI deployed in AWS."
authors = ["Nicolas Laffargue <coxhawk65@gmail.com>"]
license = "GPL"
readme = "README.md"
packages = [{include = "fastapi_aws_starter_kit"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.110.0"
mangum = "^0.17.0"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
